# shop_api

./: pyproject.toml  requirements.txt
Config/: .env  settings.py  urls.py
account/: models.py  serializers.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py
order/: admin.py  models.py
order/migrations/: 0001_initial.py
product/: models.py  serializer.py  urls.py  views.py
product/migrations/: 0001_initial.py
